@@ -6,37 +6,61 @@ import com.digirati.taxonomy.manager.lookup.persistence.model.ConceptSchemeModel
 import com.digirati.taxonomy.manager.lookup.persistence.model.ConceptSemanticRelationModel;
 import com.digirati.taxonomy.manager.lookup.persistence.model.RdfModel;
 import com.digirati.taxonomy.manager.lookup.persistence.model.SemanticRelationType;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Sets;
 import org.apache.jena.rdf.model.Model;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.ArgumentMatcher;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
 class SkosPersistenceServiceTest {
 
-    private ConceptSchemeModel conceptScheme;
-    private ConceptModel conceptOne;
-    private ConceptModel conceptTwo;
-    private ConceptModel conceptThree;
-    private ConceptSemanticRelationModel schemeHasTopConceptOne;
-    private ConceptSemanticRelationModel schemeHasTopConceptTwo;
-    private ConceptSemanticRelationModel threeIsRelatedToTwo;
+    private static final ConceptSchemeModel conceptScheme = initialiseConceptScheme();
+    private static final ConceptModel conceptOne = initialiseConcept("1", "one", "un");
+    private static final ConceptModel conceptTwo = initialiseConcept("2", "two", "deux");
+    private static final ConceptModel conceptThree = initialiseConcept("3", "three", "trois");
+    private static final ConceptSemanticRelationModel schemeHasTopConceptOne =
+            initialiseRelationship(
+                    "http://example.com/",
+                    "http://example.com/concept#1",
+                    SemanticRelationType.HAS_TOP_CONCEPT);
+    private static final ConceptSemanticRelationModel schemeHasTopConceptTwo =
+            initialiseRelationship(
+                    "http://example.com/",
+                    "http://example.com/concept#2",
+                    SemanticRelationType.HAS_TOP_CONCEPT);
+    private static final ConceptSemanticRelationModel threeIsRelatedToTwo =
+            initialiseRelationship(
+                    "http://example.com/concept#3",
+                    "http://example.com/concept#2",
+                    SemanticRelationType.RELATED);
 
     @Mock private SkosTranslator skosTranslator;
 
@@ -50,26 +74,6 @@ class SkosPersistenceServiceTest {
 
     @BeforeEach
     void setup() {
-        conceptScheme = initialiseConceptScheme();
-        conceptOne = initialiseConcept("1", "one", "un");
-        conceptTwo = initialiseConcept("2", "two", "deux");
-        conceptThree = initialiseConcept("3", "three", "trois");
-        schemeHasTopConceptOne =
-                initialiseRelationship(
-                        "http://example.com/",
-                        "http://example.com/concept#1",
-                        SemanticRelationType.HAS_TOP_CONCEPT);
-        schemeHasTopConceptTwo =
-                initialiseRelationship(
-                        "http://example.com/",
-                        "http://example.com/concept#2",
-                        SemanticRelationType.HAS_TOP_CONCEPT);
-        threeIsRelatedToTwo =
-                initialiseRelationship(
-                        "http://example.com/concept#3",
-                        "http://example.com/concept#2",
-                        SemanticRelationType.RELATED);
-
         underTest =
                 new SkosPersistenceService(
                         conceptDao, conceptSchemeDao, relationshipDao, skosTranslator);
@@ -80,9 +84,9 @@ class SkosPersistenceServiceTest {
         // Given
         RdfModel rdfModel =
                 new RdfModel(
-                        Arrays.asList(conceptOne, conceptTwo, conceptThree),
+                        List.of(conceptOne, conceptTwo, conceptThree),
                         Collections.singletonList(conceptScheme),
-                        Arrays.asList(
+                        List.of(
                                 schemeHasTopConceptOne,
                                 schemeHasTopConceptTwo,
                                 threeIsRelatedToTwo));
@@ -92,14 +96,54 @@ class SkosPersistenceServiceTest {
         underTest.create(skosInput, "http://example.com/", SkosFileType.JSON_LD);
 
         // Then
-        for (ConceptModel concept : rdfModel.getConcepts()) {
-            verify(conceptDao).create(concept);
+        Map<String, String> originalIdsToGeneratedIds = new HashMap<>();
+        ArgumentCaptor<ConceptModel> conceptCaptor = ArgumentCaptor.forClass(ConceptModel.class);
+        verify(conceptDao, times(rdfModel.getConcepts().size())).create(conceptCaptor.capture());
+        List<ConceptModel> persistedConcepts = conceptCaptor.getAllValues();
+        for (int i = 0; i < persistedConcepts.size(); i++) {
+            ConceptModel actual = persistedConcepts.get(i);
+            ConceptModel expected = ((List<ConceptModel>) rdfModel.getConcepts()).get(i);
+            originalIdsToGeneratedIds.put(expected.getId(), actual.getId());
+            assertEquals(expected.getPreferredLabel(), actual.getPreferredLabel());
+            assertEquals(expected.getAltLabel(), actual.getAltLabel());
+            assertEquals(expected.getHiddenLabel(), actual.getHiddenLabel());
+            assertEquals(expected.getNote(), actual.getNote());
+            assertEquals(expected.getChangeNote(), actual.getChangeNote());
+            assertEquals(expected.getEditorialNote(), actual.getEditorialNote());
+            assertEquals(expected.getExample(), actual.getExample());
+            assertEquals(expected.getHistoryNote(), actual.getHistoryNote());
+            assertEquals(expected.getScopeNote(), actual.getScopeNote());
         }
-        for (ConceptSchemeModel conceptScheme : rdfModel.getConceptSchemes()) {
-            verify(conceptSchemeDao).create(conceptScheme);
+
+        ArgumentCaptor<ConceptSchemeModel> conceptSchemeCaptor =
+                ArgumentCaptor.forClass(ConceptSchemeModel.class);
+        verify(conceptSchemeDao, times(rdfModel.getConceptSchemes().size()))
+                .create(conceptSchemeCaptor.capture());
+        List<ConceptSchemeModel> persistedSchemes = conceptSchemeCaptor.getAllValues();
+        for (int i = 0; i < persistedSchemes.size(); i++) {
+            ConceptSchemeModel actual = persistedSchemes.get(i);
+            ConceptSchemeModel expected =
+                    ((List<ConceptSchemeModel>) rdfModel.getConceptSchemes()).get(i);
+            originalIdsToGeneratedIds.put(expected.getId(), actual.getId());
+            assertEquals(expected.getTitle(), actual.getTitle());
         }
-        for (ConceptSemanticRelationModel relationship : rdfModel.getRelationships()) {
-            verify(relationshipDao).create(relationship);
+
+        ArgumentCaptor<ConceptSemanticRelationModel> relationshipCaptor =
+                ArgumentCaptor.forClass(ConceptSemanticRelationModel.class);
+        verify(relationshipDao, times(rdfModel.getRelationships().size()))
+                .create(relationshipCaptor.capture());
+        List<ConceptSemanticRelationModel> persistedRelationships =
+                relationshipCaptor.getAllValues();
+        for (int i = 0; i < persistedRelationships.size(); i++) {
+            ConceptSemanticRelationModel actual = persistedRelationships.get(i);
+            ConceptSemanticRelationModel expected =
+                    ((List<ConceptSemanticRelationModel>) rdfModel.getRelationships()).get(i);
+            assertEquals(
+                    originalIdsToGeneratedIds.get(expected.getSourceId()), actual.getSourceId());
+            assertEquals(
+                    originalIdsToGeneratedIds.get(expected.getTargetId()), actual.getTargetId());
+            assertEquals(expected.getRelation(), actual.getRelation());
+            assertEquals(expected.isTransitive(), actual.isTransitive());
         }
     }
 
@@ -219,6 +263,9 @@ class SkosPersistenceServiceTest {
         for (ConceptModel concept : rdfModel.getConcepts()) {
             verify(conceptDao).update(concept);
         }
+        for (ConceptSchemeModel conceptScheme : rdfModel.getConceptSchemes()) {
+            verify(conceptSchemeDao).update(conceptScheme);
+        }
         for (ConceptSemanticRelationModel relationship : rdfModel.getRelationships()) {
             verify(relationshipDao).update(relationship);
         }
@@ -271,28 +318,42 @@ class SkosPersistenceServiceTest {
                 SkosPersistenceException.class, () -> underTest.deleteConcept(conceptOne.getId()));
     }
 
-    private ConceptSchemeModel initialiseConceptScheme() {
-        return new ConceptSchemeModel().setId("http://example.com/");
+    private static ConceptSchemeModel initialiseConceptScheme() {
+        return new ConceptSchemeModel("http://example.com/", "Example Scheme");
     }
 
-    private ConceptModel initialiseConcept(String id, String englishLabel, String frenchLabel) {
-        return new ConceptModel()
-                .setId("http://example.com/concept#" + id)
-                .setPreferredLabel(
-                        "[{\"language\":\"fr\",\"value\":\""
-                                + frenchLabel
-                                + "\"},{\"language\":\"en\",\"value\":\""
-                                + englishLabel
-                                + "\"}]");
+    private static ConceptModel initialiseConcept(
+            String id, String englishLabel, String frenchLabel) {
+        String preferredLabelString =
+                "[{\"language\":\"fr\",\"value\":\""
+                        + frenchLabel
+                        + "\"},{\"language\":\"en\",\"value\":\""
+                        + englishLabel
+                        + "\"}]";
+
+        JsonNode preferredLabel = null;
+        try {
+            preferredLabel = new ObjectMapper().readTree(preferredLabelString);
+        } catch (IOException e) {
+            fail(e);
+        }
+
+        return new ConceptModel(
+                "http://example.com/concept#" + id,
+                preferredLabel,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null);
     }
 
-    private ConceptSemanticRelationModel initialiseRelationship(
+    private static ConceptSemanticRelationModel initialiseRelationship(
             String sourceId, String targetId, SemanticRelationType relationType) {
-        return new ConceptSemanticRelationModel()
-                .setSourceId(sourceId)
-                .setTargetId(targetId)
-                .setRelation(relationType)
-                .setTransitive(false);
+        return new ConceptSemanticRelationModel(sourceId, targetId, relationType, false);
     }
 
     private InputStream givenSkosInput(RdfModel rdfModel) {
@@ -321,7 +382,23 @@ class SkosPersistenceServiceTest {
 
     private Model givenSkosOutput(RdfModel input) {
         Model model = mock(Model.class);
-        given(skosTranslator.translate(input)).willReturn(model);
+        given(skosTranslator.translate(argThat(new EqualsRdfModel(input)))).willReturn(model);
         return model;
+    }
+
+    private class EqualsRdfModel implements ArgumentMatcher<RdfModel> {
+
+        private RdfModel expected;
+
+        private EqualsRdfModel(RdfModel expected) {
+            this.expected = expected;
+        }
+
+        @Override
+        public boolean matches(RdfModel argument) {
+            return expected.getConcepts().equals(argument.getConcepts())
+                    && expected.getConceptSchemes().equals(argument.getConceptSchemes())
+                    && expected.getRelationships().equals(argument.getRelationships());
+        }
     }
 }
